# NSDS_Technologies

Akka/NSDS-akka-eval/NSDS-akka-eval/: BrokerActor.java  ConfigMsg.java  EvenWorkerActor.java  OddWorkerActor.java  PubSub.java  PublisherActor.java  README.md  SubscriberActor.java  WorkerSupervisorActor.java
Akka/NSDS-akka-eval/__MACOSX/NSDS-akka-eval/: ._README.md
Akka/akka_lab/src/main/java/com/Ex1/: Counter1.java  CounterActor1.java  DecrementMessage1.java  IncrementMessage1.java  StateMessage1.java
Akka/akka_lab/src/main/java/com/Ex2/: Counter2.java  CounterActor2.java  Message2.java
Akka/akka_lab/src/main/java/com/Ex3/: Client3.java  ConfigMsg3.java  CounterActor3.java  GetMsg3.java  Main3.java  PutMsg3.java  ReplyMsg3.java  Server3.java
Akka/akka_lab/src/main/java/com/Ex4/: Client4.java  ConfigMsg4.java  Main4.java  Msg4.java  SendMsg4.java  Server4.java  SleepMsg4.java  WakeUpMsg4.java
Akka/akka_lab/src/main/java/com/Ex5/: Client5.java  ConfigMsg5.java  CounterActor5.java  GetMsg5.java  Main5.java  PutMsg5.java  ReplyMsg5.java  Server5.java  ServerSupervisor5.java
Akka/akka_lab/src/main/java/com/counter/: Counter.java  (+2 more)
MPI/Lab/MPI_lab/: CMakeLists.txt  MPI_lab.pdfZone.Identifier  guess  guess.c  monte-carlo  monte_carlo.c
Node-red/: test.txt
Node-red/node_red_lab/: ex1.json  ex2.json  ex3.json
Spark/NSDS_spark_tutorial-main/tutorial-main/: Dockerfile  template.sh
Spark/NSDS_spark_tutorial-main/tutorial-main/Dockerstuff/: docker-compose.yml
Spark/Solutions_spark_lab/Solutions_spark_lab/: README.md
Spark/spark_lab/: pom.xml
(+51 files in other folders)
